<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.sunshine.DetailActivity">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        android:title="@string/action_share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/action_favorite"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_favoris"
        android:title="@string/action_favoris"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
</menu>